Wrote interaction example for Josh's MD simulation. Added .csv.meta to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ crashlytics-build.properties
 
 # Exclude csv
 *.csv
+*.csv.meta
 
 # Exclude local project settings
 ProjectSettings/LocalProjectVersion.txt
