Added gitignore exception for MD pdb files

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ ExportedObj/
 *.booproj
 *.svd
 *.pdb
+# We need molecular dynamics-related pdb files
+![Aa]ssets/*/*.pdb
 *.mdb
 *.opendb
 *.VC.db
