Correcting doxygen workflow.

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -5,14 +5,16 @@ name: doxygen
 on: [push]
 jobs:
    setup:
-     name: Generate doxygen
-     uses: mattnotmitt/doxygen-action@v1
-     with:
-       working-directory: 'submodule/'
-       doxyfile-path: 'docs/Doxygen'
+     steps:
+         name: Generate doxygen
+         uses: mattnotmitt/doxygen-action@v1
+         with:
+           working-directory: 'submodule/'
+           doxyfile-path: 'docs/Doxygen'
    deploy:
-      name: Deploy doxygen
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      steps:
+         name: Deploy doxygen
+         uses: peaceiris/actions-gh-pages@v3
+         with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           publish_dir: ./public
