--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -6,15 +6,15 @@ on: [push]
 jobs:
    setup:
      steps:
-         name: Generate doxygen
-         uses: mattnotmitt/doxygen-action@v1
-         with:
-           working-directory: 'submodule/'
-           doxyfile-path: 'docs/Doxygen'
+         - name: Generate doxygen
+           uses: mattnotmitt/doxygen-action@v1
+           with:
+             working-directory: 'submodule/'
+             doxyfile-path: 'docs/Doxygen'
    deploy:
       steps:
-         name: Deploy doxygen
-         uses: peaceiris/actions-gh-pages@v3
-         with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_dir: ./public
+         - name: Deploy doxygen
+           uses: peaceiris/actions-gh-pages@v3
+           with:
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              publish_dir: ./public
