--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -7,6 +7,7 @@ on:
       branches:
       - 'workflow'
 jobs:
+   runs-on: ubuntu-latest
    setup:
      steps:
          - name: Generate doxygen
