--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -15,3 +15,12 @@ jobs:
            with:
                name: ${{ steps.getManualLicenseFile.outputs.filePath }}
                path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+
+         - name: Download artifacts
+           uses: actions/checkout@v2
+                 actions/download-artifact@v2
+           with: 
+               name: my-artifacts
+           run: ls -R
+            
+                 
