--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -18,6 +18,6 @@ jobs:
 
          - name: Download artifacts
            uses: actions/checkout@v2
-                 actions/download-artifact@v2
+           uses: actions/download-artifact@v2
            with: 
                name: my-artifacts
