--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -17,7 +17,8 @@ jobs:
                path: ${{ steps.getManualLicenseFile.outputs.filePath }}
 
          - name: Download artifacts
-           uses: actions/checkout@v2
-           uses: actions/download-artifact@v2
+           uses: 
+               - actions/checkout@v2
+               - actions/download-artifact@v2
            with: 
                name: my-artifacts
