--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -16,9 +16,10 @@ jobs:
                name: ${{ steps.getManualLicenseFile.outputs.filePath }}
                path: ${{ steps.getManualLicenseFile.outputs.filePath }}
 
+         - name: checkout
+           uses: actions/checkout@v2
+
          - name: Download artifacts
-           uses: 
-               - actions/checkout@v2
-               - actions/download-artifact@v2
+           uses: actions/download-artifact@v2
            with: 
                name: my-artifacts
