Correting GH actions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,16 @@
 name: Build
 
-- uses: webbertakken/unity-builder@<version>
-  env:
-    UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-  with:
-    projectPath: .
-    unityVersion: 2019.2
-    targetPlatform: StandaloneWindows
+on: 
+   push:
+      branches:
+      - 'workflow'
+
+jobs:
+   build:
+      - uses: webbertakken/unity-builder@<version>
+      env:
+      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      with:
+      projectPath: .
+      unityVersion: 2019.2
+      targetPlatform: StandaloneWindows
