--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,5 +1,9 @@
 name: Acquire activation file
-on: [push]
+on: 
+   push:
+      branches:
+      - 'workflow'
+
 jobs:
   activation:
     name: Request manual activation file 🔑
