--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,12 @@ on:
 
 jobs:
    build:
-      - uses: webbertakken/unity-builder@<version>
-      env:
-      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-      with:
-      projectPath: .
-      unityVersion: 2019.2
-      targetPlatform: StandaloneWindows
+      steps:
+         - name: Build Unity project
+           uses: webbertakken/unity-builder@<version>
+            env:
+               UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+            with:
+               projectPath: .
+               unityVersion: 2019.2
+               targetPlatform: StandaloneWindows
