--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
    build:
+      runs-on: ubuntu-latest
       steps:
          - name: Build Unity project
            uses: webbertakken/unity-builder@v2
