--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
                UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
            with:
               projectPath: .
-              unityVersion: Unity_v2019.2.11f1
+              unityVersion: 2019.2.11f1
               targetPlatform: StandaloneWindows
