--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.performance.profile-analyzer": "1.1.0",
     "com.unity.purchasing": "3.0.2",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "2.1.4",
