--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,8 +17,11 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "2.0.0",
+    "com.unity.xr.magicleap": "4.2.2",
     "com.unity.xr.management": "4.0.7",
+    "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.xr.oculus": "1.8.1",
+    "com.unity.xr.windowsmr": "2.7.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
